--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,6 +1,17 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 body {
   font-size: 120%;
   font-family: Arial;
+}
+
+h1 {
+  text-decoration: none;
 }
 
 button, input {
@@ -13,13 +24,13 @@ table {
 }
 
 td, th {
-  border: 1px solid #dddddd;
+  /* border: 1px solid #dddddd; */
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
+  background-color: #ececec;
 }
 
 .error {
@@ -33,8 +44,8 @@ tr:nth-child(even) {
 }
 
 .total {
-  font-size: 150%;
-  text-decoration: underline;
+  /* font-size: 150%;
+  text-decoration: underline; */
 }
 
 .form {
@@ -46,6 +57,11 @@ tr:nth-child(even) {
   text-align: left;
   max-height: 300px;
   overflow: auto;
-  width: 90%;
+  /* width: 90%; */
   margin: 0 auto;
 }
+
+.btn-width {
+  width:100%
+}
+
